--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,7 @@
             "outputPath": "dist/frontend",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            "sourceMap": false,
             "polyfills": [
               "zone.js"
             ],
